# rcn2sql

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  rcn_struct_desc.md  requirements.txt
.github/workflows/: release.yml
src/: __init__.py  build_wide.py  import_meta.py  load_rcn.py  logging_config.py  utils.py
src/parsers/: __init__.py  adres.py  base.py  budynek.py  dokument.py  dzialka.py  lokal.py  nieruchomosc.py  transakcja.py
tests/: test_build_wide.py  test_parsers.py
